--- a/docker/jupyter_config/README
+++ b/docker/jupyter_config/README
@@ -1,7 +1,7 @@
-Create a key with:
+# Create a key with:
 
-    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout mykey.key -out mycert.pem
+openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout mykey.key -out mycert.pem
 
-Configure a password with:
+# Configure a password with:
 
-    jupyter notebook password --config=./jupyter_notebook_config.json
+jupyter notebook password --config=./jupyter_notebook_config.json
