--- a/install
+++ b/install
@@ -1,9 +1,15 @@
-#!/bin/bash
-(cd cctc && sudo python setup.py install)
-(cd dlinputs && sudo python setup.py install)
-(cd dltrainers && sudo python setup.py install)
-(cd ocrobin && sudo python setup.py install)
-(cd ocroline && sudo python setup.py install)
-(cd ocrorot && sudo python setup.py install)
-(cd ocroseg && sudo python setup.py install)
-(cd ocrodeg && sudo python setup.py install)
+#!/bin/bash -x
+default_python=/usr/bin/python
+if test -x /opt/conda/bin/python; then
+    default_python=/opt/conda/bin/python
+fi
+python=${python:-$default_python}
+echo python=$python
+(cd cctc && sudo $python setup.py install)
+(cd dlinputs && sudo $python setup.py install)
+(cd dltrainers && sudo $python setup.py install)
+(cd ocrobin && sudo $python setup.py install)
+(cd ocroline && sudo $python setup.py install)
+(cd ocrorot && sudo $python setup.py install)
+(cd ocroseg && sudo $python setup.py install)
+(cd ocrodeg && sudo $python setup.py install)
